# reaper-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  smithery.yaml  test-results.md
src/reaper_mcp/: __main__.py  analysis_tools.py  audio_tools.py  config.py  connection.py  fx_tools.py  mastering_tools.py  midi_tools.py  mixing_tools.py  project_tools.py  render_tools.py  server.py  track_tools.py
